--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "A CRUD api built with MongoDB",
   "main": "index.js",
   "scripts": {
-    "test": "docker-compose -f docker/docker-compose.test.yml up --build --abort-on-container-exit",
-    "production": "docker-compose -f docker/docker-compose.yml up -d",
-    "build": "docker-compose -f docker/docker-compose.yml build"
+    "start": "node ./index.js"
   },
   "repository": {
     "type": "git",
@@ -24,9 +22,11 @@
   },
   "homepage": "https://github.com/torchhound/mongo-crud#readme",
   "dependencies": {
+    "@okta/jwt-verifier": "^1.0.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mongodb": "^3.1.8"
+    "mongodb": "^3.1.8",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "mocha": "^5.2.0",
